# PSPVice

./: CommonHeader.h  HowtoUpdateToNewViceVersion.txt  ICON0_PLUS4.psd  Makefile_PSPPlus4  Makefile_PSPVIC20  Makefile_PSPVice  PARAM.SFO  config.status  psp-gcc.txt  readme.txt  transferttoPSP.bat  transferttoPSPPlus4.bat  transferttoPSPVIC20.bat
MenuTest/: MenuTest.sln
data/: Makefile  genmsvcver.ilk
doc/: Makefile
gfx/: 1.c  C64_KeyboardPalette.bap  C64_pspvice_keys_Shifted.psd  C64_pspvice_keys_Widdy.tga  KeyboardShifted.tm2  KeyboardWiddy.tm2  PSPViceGameMenu.psd  PSPViceGameMenu2.psd
man/: Makefile
po/: Makefile.in
src/: Makefile  autostart.c  config.h  (+14 more)
src/arch/ps2/: Makefile  Makefile.am  Makefile.in  archdep.c  bitmap.c  bitmap.h  c128kbd.c  c128ui.c  c64kbd.c  c64ui.c  cbm2ui.c  cdvd_vsync.c  cdvd_vsync.h  console.c  f_arial.c  f_arial7.c  fileexp.c  fileexp.h  g2.c  g2.h  gif.h  gr_button1.c  gr_button2.c  gr_button3.c  gr_button4.c  gr_button5.c  gr_button6.c  gr_button7.c  gr_c128kbd.c  gr_keyboard.c  gr_plus4kbd.c  gr_pointer.c  gs.h  hw.h  infowin.c  joy.c  joy.h  kbd.c  kbd.h  libkbd.c  (+39 more)
src/arch/ps2/.deps/: archdep.Po  bitmap.Po  c128kbd.Po  c128ui.Po  c64kbd.Po  c64ui.Po  cbm2ui.Po  cbmcharsets.Po  cdvd_vsync.Po  console.Po  f_arial.Po  f_arial7.Po  fileexp.Po  g2.Po  gr_button1.Po  gr_button2.Po  gr_button3.Po  gr_button4.Po  gr_button5.Po  gr_button6.Po  gr_button7.Po  gr_c128kbd.Po  gr_keyboard.Po  gr_plus4kbd.Po  gr_pointer.Po  grabkey.Po  gs.Po  infowin.Po  joy.Po  kbd.Po  libkbd.Po  loadmodule.Po  menu.Po  menudefs.Po  mousedrv.Po  msdosmain.Po  osdmsg.Po  pad.Po  petui.Po  plus4kbd.Po  (+31 more)
(+325 files in other folders)
