## Makefile.am for the PS2 version of `libarch.a'.

INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/drive \
	-I$(top_srcdir)/src/vdrive \
	-I$(top_srcdir)/src/raster \
	-I$(top_srcdir)/src/c64 \
	-I$(top_srcdir)/src/c128 \
	-I$(top_srcdir)/src/vic20 \
	-I$(top_srcdir)/src/pet \
	-I$(top_srcdir)/src/sid

noinst_LIBRARIES = libarch.a

libarch_a_SOURCES = \
	archdep.c \
	archdep.h \
	c128ui.c \
	c64ui.c \
	cbm2ui.c \
	cbmcharsets.c \
	cbmcharsets.h \
	console.c \
	joy.c \
	joy.h \
	kbd.c \
	kbd.h \
	menudefs.c \
	menudefs.h \
	mousedrv.c \
	mousedrv.h \
	ps2main.c \
	petui.c \
	plus4ui.c \
	types.h \
	ui.c \
	ui.h \
	uiattach.h \
	uiattach.c \
	uic64cart.c \
	uic64cart.h \
	uicmdline.c \
	uidrive.c \
	uidrive.h \
	uimon.c \
	uiperipherial.c \
	uiperipherial.h \
	uiprinter.c \
	uiprinter.h \
	uireu.c \
	uireu.h \
	uisid.c \
	uisid.h \
	uisnapshot.c \
	uisnapshot.h \
	uisound.c \
	uisound.h \
	vic20ui.c \
	video.c \
	videoarch.h \
	vsidui.c \
	vsync.c \
	gs.c \
	g2.c \
	dma_asm.s \
	gs_asm.s \
        hw.s \
        ps2_asm.s \
	loadmodule.c \
	ps2kbd.c \
	sjpcm_rpc.c \
	support.c \
	osdmsg.c \
	f_arial.c \
	f_arial7.c \
	bitmap.c \
	libkbd.c \
	vkeyboard.c \
	gr_keyboard.c \
	gr_button1.c \
	gr_button2.c \
	gr_button3.c \
	gr_button4.c \
	gr_button5.c \
	gr_button6.c \
	gr_button7.c \
	gr_pointer.c \
	gr_c128kbd.c \
	menu.c \
	fileexp.c \
	infowin.c \
	cdvd_vsync.c \
	pad.c \
	gr_plus4kbd.c \
	plus4kbd.c \
	c128kbd.c \
	c64kbd.c


EXTRA_DIST =
